[package]
name = "concord_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", default-features = false, features = ["bevy_winit"] }
concord_editor = { path = "../concord_editor" }
concord_logger = { path = "../concord_logger" }