[package]
name = "concord_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", default-features = false, features = ["bevy_winit"] }
kajiya = { path = "../../kajiya/crates/lib/kajiya" }
egui-gizmo = { path = "../../egui-gizmo" }
bevy-kajiya = { path = "../../bevy-kajiya"}
concord_logger = { path = "../concord_logger" }